--- a/SourceCode/2023/March2023/ArithmeticOperations/-Operation.xaml
+++ b/SourceCode/2023/March2023/ArithmeticOperations/-Operation.xaml
@@ -1,13 +1,9 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="__Operation" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="__Operation" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="In_FirstNum" Type="InArgument(x:Int32)" />
     <x:Property Name="In_SecondNum" Type="InArgument(x:Int32)" />
     <x:Property Name="Result_Value" Type="OutArgument(x:Int32)" />
-    <x:Property Name="OperandValue" Type="InArgument(x:String)" />
   </x:Members>
-  <this:__Operation.OperandValue>
-    <InArgument x:TypeArguments="x:String" />
-  </this:__Operation.OperandValue>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
